// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test bottomItem props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="side-bar"
      >
        <div
          class="side-bar__top"
        >
          <div
            class="navigate-btn"
          >
            <svg
              class="logo"
            >
              eightBank.svg
            </svg>
            <svg
              class="back-btn"
              fill="white"
              height="30"
              width="30"
            >
              back.svg
            </svg>
          </div>
          <div
            class="list-item"
          >
            <svg>
              plus.svg
            </svg>
            <div
              class="sidebar-item"
              role="listitem"
            >
              Text
            </div>
          </div>
        </div>
        <div
          class="sidebar-item"
          role="listitem"
        >
          Label
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="side-bar"
    >
      <div
        class="side-bar__top"
      >
        <div
          class="navigate-btn"
        >
          <svg
            class="logo"
          >
            eightBank.svg
          </svg>
          <svg
            class="back-btn"
            fill="white"
            height="30"
            width="30"
          >
            back.svg
          </svg>
        </div>
        <div
          class="list-item"
        >
          <svg>
            plus.svg
          </svg>
          <div
            class="sidebar-item"
            role="listitem"
          >
            Text
          </div>
        </div>
      </div>
      <div
        class="sidebar-item"
        role="listitem"
      >
        Label
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test props children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="side-bar"
      >
        <div
          class="side-bar__top"
        >
          <div
            class="navigate-btn"
          >
            <svg
              class="logo"
            >
              eightBank.svg
            </svg>
            <svg
              class="back-btn"
              fill="white"
              height="30"
              width="30"
            >
              back.svg
            </svg>
          </div>
          <div
            class="list-item"
          >
            <svg>
              plus.svg
            </svg>
            <div
              class="sidebar-item"
              role="listitem"
            >
              Text
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="side-bar"
    >
      <div
        class="side-bar__top"
      >
        <div
          class="navigate-btn"
        >
          <svg
            class="logo"
          >
            eightBank.svg
          </svg>
          <svg
            class="back-btn"
            fill="white"
            height="30"
            width="30"
          >
            back.svg
          </svg>
        </div>
        <div
          class="list-item"
        >
          <svg>
            plus.svg
          </svg>
          <div
            class="sidebar-item"
            role="listitem"
          >
            Text
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
